WebCore: Fix for https://bugs.webkit.org/show_bug.cgi?id=32757 Repaint bug with -webkit-shadow on svg shapes -and- <rdar://problem/7389149>

Reviewed by Oliver Hunt.

Inflate the repaintRect for the shadow using its extent.
* rendering/RenderForeignObject.cpp:
(WebCore::RenderForeignObject::computeRectForRepaint):
* rendering/RenderSVGImage.cpp:
(WebCore::RenderSVGImage::computeRectForRepaint):
* rendering/RenderSVGModelObject.cpp:
(WebCore::RenderSVGModelObject::computeRectForRepaint):
* rendering/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::repaintRectInLocalCoordinates):
(WebCore::RenderSVGRoot::computeRectForRepaint):
* rendering/RenderSVGText.cpp:
(WebCore::RenderSVGText::computeRectForRepaint):
* rendering/SVGRenderSupport.cpp:
(WebCore::getSVGShadowExtent):
(WebCore::SVGRenderBase::inflateForShadow):
* rendering/SVGRenderSupport.h:

LayoutTests: Tests for https://bugs.webkit.org/show_bug.cgi?id=32757 Repaint bug
with -webkit-shadow on svg shapes
-and-
<rdar://problem/7389149>

Reviewed by Oliver Hunt.

* fast/repaint/moving-shadow-on-container.html: Added.
* fast/repaint/moving-shadow-on-path.html: Added.
* platform/mac/fast/repaint/moving-shadow-on-container-expected.checksum: Added.
* platform/mac/fast/repaint/moving-shadow-on-container-expected.png: Added.
* platform/mac/fast/repaint/moving-shadow-on-container-expected.txt: Added.
* platform/mac/fast/repaint/moving-shadow-on-path-expected.checksum: Added.
* platform/mac/fast/repaint/moving-shadow-on-path-expected.png: Added.
* platform/mac/fast/repaint/moving-shadow-on-path-expected.txt: Added.



Canonical link: https://commits.webkit.org/44429@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53017 268f45cc-cd09-0410-ab3c-d52691b4dbfc