WebCore/rendering/SVGRenderSupport.h
@@ -55,6 +55,9 @@ namespace WebCore {
         FloatRect filterBoundingBoxForRenderer(const RenderObject*) const;
         FloatRect clipperBoundingBoxForRenderer(const RenderObject*) const;
         FloatRect maskerBoundingBoxForRenderer(const RenderObject*) const;
+
+        virtual void inflateForShadow(RenderStyle*, IntRect&) const;
+
     protected:
         static IntRect clippedOverflowRectForRepaint(RenderObject*, RenderBoxModelObject* repaintContainer);
         static void computeRectForRepaint(RenderObject*, RenderBoxModelObject* repaintContainer, IntRect&, bool fixed);
